--- a/client/templates/landing.html
+++ b/client/templates/landing.html
@@ -11,6 +11,11 @@
 <template name="game">
 	<h1>Game Created</h1>
 	{{_id}} + {{createdAt}}
+	<ul>
+		{{#each players}}
+	    	<li>{{name}}</li>
+	    {{/each}}
+	</ul>
 	<div class="button">Start</div>
 </template>
 
@@ -22,4 +27,17 @@
     {{else}}
         <button id="facebook-login" class="btn btn-default"> Login with Facebook</button>
     {{/if}}
+</template>
+
+<template name="join">
+	<p>Enter game id</p>
+	<form id="join-game">
+        <input type="text" name="gameid" placeholder="Enter game id" />
+	</form>
+</template>
+
+<template name="pregame">
+	<p>Game joined</p>
+	{{currentUser.services.facebook.name}} -
+	{{currentUser.services.facebook.gender}}
 </template>
