--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -1,6 +1,6 @@
 <template name="game">
 	<h1>Game Created</h1>
-	{{_id}} + {{createdAt}}
+	{{newId}}
 	<ul>
 		{{#each players}}
 	    	<li>{{name}}</li>
