Added Start Button

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -6,5 +6,7 @@
 	    	<li>{{name}}</li>
 	    {{/each}}
 	</ul>
-	<div class="button">Start</div>
+	{{#if isTwo}}
+		<div class="button">Start</div>
+	{{/if}}
 </template>
