Added common question screen

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -7,6 +7,6 @@
 	    {{/each}}
 	</ul>
 	{{#if isTwo}}
-		<div class="button">Start</div>
+		<div class="button" id="startButton">Start</div>
 	{{/if}}
 </template>
