--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -1,9 +1,35 @@
 <template name="question">
 	<h1>{{question}}</h1>
-	<ul> 
-		<li>{{rightAnswer}}</li>
-		<li>{{wrongAnswer1}}</li>
-		<li>{{wrongAnswer2}}</li>
-		<li>{{wrongAnswer3}}</li>
-	</ul>
+		{{#if randoNum1}}
+			<ul>
+				<li>{{rightAnswer}}</li>
+				<li>{{wrongAnswer1}}</li>
+				<li>{{wrongAnswer2}}</li>
+				<li>{{wrongAnswer3}}</li>
+			</ul>
+		{{/if}}
+		{{#if randoNum2}}
+			<ul>
+				<li>{{wrongAnwer1}}</li>
+				<li>{{rightAnswer}}</li>
+				<li>{{wrongAnswer2}}</li>
+				<li>{{wrongAnswer3}}</li>
+			</ul>
+		{{/if}}
+		{{#if randoNum3}}
+			<ul>
+				<li>{{wrongAnswer1}}</li>
+				<li>{{wrongAnswer2}}</li>
+				<li>{{rightAnswer}}</li>
+				<li>{{wrongAnswer3}}</li>
+			</ul>
+		{{else}}
+			<ul>
+				<li>{{wrongAnswer1}}</li>
+				<li>{{wrongAnswer2}}</li>
+				<li>{{wrongAnswer3}}</li>
+				<li>{{rightAnswer}}</li>
+			</ul>
+		{{/if}}
+
 </template>
