redirect to player temp when game starts

--- a/client/templates/join.html
+++ b/client/templates/join.html
@@ -18,5 +18,6 @@
 <template name="pregame">
 	<p>Game joined</p>
 	{{currentUser.services.facebook.name}} -
-	{{currentUser.services.facebook.gender}}
+	{{currentUser.services.facebook.gender}}<br>
+    {{newId}}
 </template> 
