--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -1,35 +1,37 @@
 <template name="question">
 	<h1>{{question}}</h1>
-		{{#if randoNum1}}
-			<ul>
-				<li>{{rightAnswer}}</li>
-				<li>{{wrongAnswer1}}</li>
-				<li>{{wrongAnswer2}}</li>
-				<li>{{wrongAnswer3}}</li>
-			</ul>
-		{{/if}}
-		{{#if randoNum2}}
-			<ul>
-				<li>{{wrongAnwer1}}</li>
-				<li>{{rightAnswer}}</li>
-				<li>{{wrongAnswer2}}</li>
-				<li>{{wrongAnswer3}}</li>
-			</ul>
-		{{/if}}
-		{{#if randoNum3}}
-			<ul>
-				<li>{{wrongAnswer1}}</li>
-				<li>{{wrongAnswer2}}</li>
-				<li>{{rightAnswer}}</li>
-				<li>{{wrongAnswer3}}</li>
-			</ul>
+		{{#if randoNum}}
+			{{#if randoNum2}}
+				<ul>
+					<li>{{rightAnswer}}</li>
+					<li>{{wrongAnswer1}}</li>
+					<li>{{wrongAnswer2}}</li>
+					<li>{{wrongAnswer3}}</li>
+				</ul>
+			{{else}}
+				<ul>
+					<li>{{wrongAnwer1}}</li>
+					<li>{{rightAnswer}}</li>
+					<li>{{wrongAnswer2}}</li>
+					<li>{{wrongAnswer3}}</li>
+				</ul>
+			{{/if}}
 		{{else}}
-			<ul>
-				<li>{{wrongAnswer1}}</li>
-				<li>{{wrongAnswer2}}</li>
-				<li>{{wrongAnswer3}}</li>
-				<li>{{rightAnswer}}</li>
-			</ul>
+			{{#if randoNum2}}
+				<ul>
+					<li>{{wrongAnswer1}}</li>
+					<li>{{wrongAnswer2}}</li>
+					<li>{{rightAnswer}}</li>
+					<li>{{wrongAnswer3}}</li>
+				</ul>
+			{{else}}
+				<ul>
+					<li>{{wrongAnswer1}}</li>
+					<li>{{wrongAnswer2}}</li>
+					<li>{{wrongAnswer3}}</li>
+					<li>{{rightAnswer}}</li>
+				</ul>
+			{{/if}}
 		{{/if}}
 
 </template>
