--- a/client/templates/landing.html
+++ b/client/templates/landing.html
@@ -1,9 +1,19 @@
 <template name="main">
-	<h1>Social Trivia Game</h1>
-	{{> yield}}
+	<!-- <h1>Biffalo or Buffalo</h1> -->
+	<div class="wrapper">
+		{{> yield}}
+	</div>
+</template>
+
+<template name="special">
+	<h1>Biffalo or Buffalo</h1>
+	<div class="wrapper">
+		{{> yield}}
+	</div>
 </template>
 
 <template name="landing">
-	<div class="button" id="create_game">Create Game</div>
-	<div class="button" id="join_game">Join Game</div>
+		<img class="logo" src="/images/buffalo.png">
+		<div class="button" id="create_game">Create Game</div>
+		<div class="button" id="join_game">Join Game</div>
 </template>
