--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -1,6 +1,7 @@
 <template name="question">
-	<h1>{{question}}</h1>
-		{{#if randoNum1}}
+	<h1 style="font-size: 50px; width: 500px; margin: 2em auto 0;">{{question}}</h1>
+	<p>Select your answer on your device!</p>
+<!-- 		{{#if randoNum1}}
 			<ul>
 				<li>{{rightAnswer}}</li>
 				<li>{{wrongAnswer1}}</li>
@@ -30,6 +31,6 @@
 				<li>{{wrongAnswer3}}</li>
 				<li>{{rightAnswer}}</li>
 			</ul>
-		{{/if}}
+		{{/if}} -->
 
 </template>
