--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -1,7 +1,7 @@
 <template name="game">
 	<h1>Game Created</h1>
-	{{newId}}
-	<ul>
+	<div class="box">Game ID: <span class="id">{{newId}}</span></div>
+	<ul class="players">
 		{{#each players}}
 	    	<li>{{name}}</li>
 	    {{/each}}
