--- a/client/templates/join.html
+++ b/client/templates/join.html
@@ -4,20 +4,22 @@
         {{currentUser.services.facebook.gender}}
         <button id="logout">Logout</button>
     {{else}}
-        <button id="facebook-login" class="btn btn-default"> Login with Facebook</button>
+        <h1>Login</h1>
+        <div id="facebook-login" class="button">Login with Facebook</div>
     {{/if}}
 </template>
 
 <template name="join">
-	<p>Enter game id</p>
+	<h1>Enter Game ID</h1>
 	<form id="join-game">
-        <input type="text" name="gameid" placeholder="Enter game id" />
+        <input type="text" name="gameid" placeholder="---" />
 	</form>
 </template>
 
 <template name="pregame">
-	<p>Game joined</p>
-	{{currentUser.services.facebook.name}} -
+	<h1>Game joined</h1>
+    <p>Game {{newId}} has been joined successfully.<br>Press "start" on the main display when you're ready to play!</p>
+	<!-- {{currentUser.services.facebook.name}} -
 	{{currentUser.services.facebook.gender}}<br>
-    {{newId}}
+    {{newId}} -->
 </template> 
