--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -21,6 +21,18 @@ img.logo {
   height: 120px;
 }
 
+.answerChoices li div{
+    background-color: rgba(255,255,255,.25);
+    width: 200px;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 10px;
+    color: #FFF;
+    cursor: pointer;
+    transition: all .5s;
+    opacity: .5;
+}
+
 div.button {
   background-color: rgba(255,255,255,.25);
   width: 200px;
@@ -30,6 +42,12 @@ div.button {
   color: #FFF;
   cursor: pointer;
   transition: all .5s;
+  opacity: 1 !important;
+}
+
+.selectedChoice {
+    opacity: 1 !important;
+    width: 225px !important;
 }
 
 div.button:hover {
