--- a/client/templates/loserpage.html
+++ b/client/templates/loserpage.html
@@ -1,8 +1,5 @@
 <template name = "loserpage">
 	<h1>You picked the wrong answer :(</h1>
-	<p>You got 0 points!
-	Score: 
-	{{score}}
-	</p>
+	<p>You got 0 points!<br>Score: {{score}}</p>
 
 </template>
