--- a/client/templates/winnerpage.html
+++ b/client/templates/winnerpage.html
@@ -1,8 +1,4 @@
 <template name = "winnerpage">
 	<h1>You picked the correct answer!</h1>
-	<p>You got 15 points!
-	Score: 
-	{{score}}
-	</p>
-
+	<p>You got 15 points!<br>Score: {{score}}</p>
 </template>
