--- a/client/templates/join.html
+++ b/client/templates/join.html
@@ -10,6 +10,7 @@
 </template>
 
 <template name="join">
+    <img class="profilePic" src="{{profilePic}}">
 	<h1>Enter Game ID</h1>
 	<form id="join-game">
         <input type="text" name="gameid" placeholder="---" />
