--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -1,11 +1,9 @@
 <template name="game">
 	<h1>Game Created</h1>
 	<div class="box">Game ID: <span class="id">{{newId}}</span></div>
-	<ul class="players">
 		{{#each players}}
-	    	<li>{{name}}</li>
+	    	<div><img src="{{profilePic}}" class="list profilePic"><span class="players">{{name}}</span></div>
 	    {{/each}}
-	</ul>
 	{{#if isTwo}}
 		<div class="button" id="startButton">Start</div>
 	{{/if}}
