--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -1,4 +1,5 @@
 <template name="question">
-	<h1 style="font-size: 50px; width: 500px; margin: 2em auto 0;">{{question}}</h1>
+	{{#if imageURL}}<img src="{{imageURL}}" class="question">{{/if}}
+	<h1 style="font-size: 50px; width: 500px; margin: .5em auto 0;">{{question}}</h1>
 	<p>Select your answer on your device!</p>
 </template>
